# cfs-basecamp

./: .gitignore  LICENSE  README.md  launch_basecamp.sh
_includes/: youtube.html
apps/: .gitignore
apps/app_c_demo/: CMakeLists.txt  LICENSE  README.md  app_c_demo.json
apps/app_c_demo/eds/: app_c_demo.xml
apps/app_c_fw/: CMakeLists.txt  LICENSE  README.md  app_c_fw.json
apps/app_c_fw/eds/: app_c_fw.xml
apps/file_mgr/: CMakeLists.txt  LICENSE  README.md  file_mgr.json
apps/file_mgr/eds/: file_mgr.xml
apps/file_xfer/: CMakeLists.txt  LICENSE  README.md  file_xfer.json  file_xfer_ini.json
apps/file_xfer/eds/: file_xfer.xml
apps/kit_sch/: CMakeLists.txt  LICENSE  README.md  kit_sch.json
apps/kit_sch/eds/: kit_sch.xml
apps/kit_to/: CMakeLists.txt  LICENSE  README.md  kit_to.json
apps/kit_to/eds/: kit_to.xml
apps/kit_to/fsw/mission_inc/: kit_to_mission_cfg.h
apps/kit_to/fsw/platform_inc/: kit_to_platform_cfg.h
apps/kit_to/fsw/src/: app_cfg.h  evt_plbk.c  evt_plbk.h  kit_to_app.c  kit_to_app.h  pktmgr.c  pktmgr.h  pkttbl.c  pkttbl.h
apps/kit_to/fsw/tables/: cpu1_kit_to_ini.json  cpu1_kit_to_lo_tbl.json  cpu1_kit_to_pkt_tbl.json
apps/osk_c_demo/: CMakeLists.txt  README.md  osk_c_demo.json
apps/osk_c_demo/eds/: osk_c_demo.xml
apps/osk_c_fw/: CMakeLists.txt  README.md  osk_c_fw.json
apps/osk_c_fw/eds/: osk_c_fw.xml
apps/sample_app/: CMakeLists.txt
apps/sample_app/eds/: sample_app.xml
apps/to_lab/: CMakeLists.txt  README.md
apps/to_lab/eds/: to_lab.xml
cfe/: README.md
cfe-eds-framework/: Makefile
cfe-eds-framework/apps/ci_lab/: CMakeLists.txt
cfe-eds-framework/apps/sch_lab/: CMakeLists.txt  README.md
cfe-eds-framework/apps/to_lab/: CMakeLists.txt
cfe-eds-framework/basecamp_defs/: basecamp_mission_cfg.h  cfe_topicids.ini  cfe_topicids.py  cpu1_app_c_demo_ini.json  cpu1_app_c_hist_tbl.json  cpu1_cfe_es_startup.scr  cpu1_file_mgr_ini.json  cpu1_file_xfer_ini.json  cpu1_filesys_tbl.c  cpu1_kit_ci_ini.json  cpu1_kit_sch_ini.json  cpu1_kit_sch_msgtbl.json  cpu1_kit_sch_schtbl.json  cpu1_kit_to_ini.json  cpu1_kit_to_pkt_tbl.json  cpu1_osk_c_demo_ini.json  cpu1_osk_c_hist_tbl.json  global_build_options.cmake  mission_build_custom.cmake  targets.cmake
cfe-eds-framework/basecamp_defs/default/: cfe-topicids.xml  cpu1_cfe_es_startup.scr  cpu1_kit_sch_msgtbl.json  cpu1_kit_sch_schtbl.json  cpu1_kit_to_pkt_tbl.json  targets.cmake
cfe-eds-framework/basecamp_defs/eds/: cfe-topicids.xml  config.xml
cfe-eds-framework/cfe/: CMakeLists.txt
cfe-eds-framework/cfe/cmake/: README.md  mission_build.cmake  mission_defaults.cmake
cfe-eds-framework/cfe/cmake/tables/: CMakeLists.txt  table_config.cmake.in
cfe-eds-framework/cfe/docs/: cFE_FunctionalRequirements.csv
cfe-eds-framework/tools/: CMakeLists.txt
cfe-eds-framework/tools/cFS-EDS-GroundStation/: CMakeLists.txt  GS_Controller.py  GS_Model.py  README.md  cFS-EDS-GroundStation.py
cfe-eds-framework/tools/cFS-EDS-GroundStation/docs/: cFS-EDS-Groundstation Users Manual.docx
cfe-eds-framework/tools/cFS-EDS-GroundStation/utils/: cmd_util.py  convert_tlm_file.py  tlm_decode.py
cfe-eds-framework/tools/tblCRCTool/: README.md  cfe_ts_crc_version.h
cfe/cmake/: arch_build.cmake
cfe/modules/evs/: CMakeLists.txt
cfe/modules/resourceid/: mission_build.cmake
cfe/modules/sb/: CMakeLists.txt
gnd-sys/app/: PySimpleGUI-5.0.2026.0-py3-none-any.whl  __init__.py  basecamp.ini  basecamp.py  build_cfs.sh  build_cfs_topicids.sh  logging.ini  make_install.sh  setvars.sh  start_cfs.sh  stop_cfs.sh  sudo_start_cfs.sh
gnd-sys/app/cfsinterface/: __init__.py  cfeconstants.py  cfefile.py  (+13 more)
gnd-sys/cmd-sender/: cfe_es_perf_mon_exercise.txt  cfe_tbl_cmds.txt  demo_cmd_sender.txt  ds_event_exercise.txt  kit_to_filter_exercise.txt  memory_maint_exercise.txt  mutli_pass_file_xfer_exercise.txt
gnd-sys/cmd-sequence/: bc42_exercises.txt  cfe_es_perf_mon_exercise.txt  demo_cmd_sequence.txt  ds_event_exercise.txt  kit_to_filter_exercise.txt  mutli_pass_file_xfer_exercise.txt
gnd-sys/flt-file-server/: file_mgr_sys_pseudo.tbl  filesys_tbl.tbl  fitp_test_1.txt  hist_bin_02.txt  osk_c_demo_ini.json  osk_c_hist_tbl.json  sample_app_tbl.tbl
gnd-sys/logs/: debug.log.2022-09-16_04
gnd-sys/scripts/: demo_script.py
gnd-sys/templates/: app_template.json
libs/sample_lib/: README.md
tools/tblCRCTool/: cfe_ts_crc.c
usr/scripts/: aareadme.txt
(+505 files in other folders)
